--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "description": "Binary Object Representation Serializer for Hashing",
   "main": "borsh-js/index.js",
+  "types": "borsh-js/index.d.ts",
   "scripts": {
     "build": "tsc -p ./tsconfig.json",
     "test": "jest test --runInBand",
-    "dev": "yarn build -w"
+    "dev": "yarn build -w",
+    "pretest": "yarn build"
   },
   "repository": {
     "type": "git",
