--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,33 @@ rust:
   - beta
   - nightly-2019-05-22
   - nightly
+
 matrix:
   allow_failures:
     - rust: nightly
   fast_finish: true
+
+branches:
+  only:
+  - master
+
+cache:
+  yarn: true
+  cargo: true
+
 before_install:
+  - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq yarn
+
+install:
+  - cd borsh-rs && cargo build --verbose && cd ..
+  - yarn install
+
+build:
   - cd borsh-rs
-cache: cargo
+  - cargo build --verbose
+  - cargo test --verbose
+  - cd ..
+  - yarn test
