--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "module": "commonjs",
     "target": "esnext",
     "moduleResolution": "node",
-    "outDir": "./borsh-js",
+    "outDir": "./lib",
     "declaration": true,
     "preserveSymlinks": true,
     "preserveWatchOutput": true,
@@ -18,6 +18,7 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": false,
     "noImplicitReturns": true,
+    "experimentalDecorators": true,
     "noUnusedLocals": true
   },
   "files": ["./borsh-ts/index.ts"]
