--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "borsh",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Binary Object Representation Serializer for Hashing",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -23,7 +23,7 @@
     "serializer",
     "deserializer",
     "consistency",
-    "determenistic"
+    "deterministic"
   ],
   "author": "Near Inc",
   "license": "Apache-2.0",
