--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "serializer",
     "deserializer",
     "consistency",
-    "determenistic"
+    "deterministic"
   ],
   "author": "Near Inc",
   "license": "Apache-2.0",
