Add prettier package

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jest": "^26.0.1",
     "js-sha256": "^0.9.0",
     "jsfuzz": "^1.0.14",
+    "prettier": "^2.4.1",
     "typescript": "^3.6.2"
   },
   "dependencies": {
