Update action to use package json script as source of truth

--- a/.github/workflows/borsh.yml
+++ b/.github/workflows/borsh.yml
@@ -9,4 +9,4 @@ jobs:
               with:
                   node-version: '14'
             - run: yarn install
-            - run: yarn prettier --check "borsh-ts/index.ts"
+            - run: yarn pretty:check
