Add Prettier to keep code consistent. (#33)
* Add prettier package

* Setup prettierrc closest to existing code style

* Prettier format

* format prettierrc and package json

* Ignore .d.ts files

* Add github action

* Update action to use package json script as source of truth

* Fix formatting

* Remove prettier config

* Re-format with no prettier config

* Add unit test to workflow

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dev": "yarn build -w",
     "pretest": "yarn build",
     "lint": "eslint borsh-ts/**/*.ts",
+    "pretty": "prettier --write borsh-ts/**/*.ts package.json",
+    "pretty:check": "yarn pretty --check",
     "fix": "eslint borsh-ts/**/*.ts --fix"
   },
   "repository": {
@@ -43,6 +45,7 @@
     "jest": "^26.0.1",
     "js-sha256": "^0.9.0",
     "jsfuzz": "^1.0.14",
+    "prettier": "^2.4.1",
     "typescript": "^3.6.2"
   },
   "dependencies": {
