--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "bn.js": "^5.2.0",
     "bs58": "^4.0.0",
+    "buffer": "^6.0.3",
     "text-encoding-utf-8": "^1.0.2"
   }
 }
