--- a/.github/workflows/borsh.yml
+++ b/.github/workflows/borsh.yml
@@ -10,6 +10,15 @@ jobs:
                   node-version: '14'
             - run: yarn install
             - run: yarn test
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - uses: actions/setup-node@v2
+              with:
+                  node-version: '14'
+            - run: yarn install
+            - run: yarn build
     prettier:
         runs-on: ubuntu-latest
         steps:
