--- a/.github/workflows/borsh.yml
+++ b/.github/workflows/borsh.yml
@@ -8,14 +8,23 @@ jobs:
             - uses: actions/setup-node@v2
               with:
                   node-version: '14'
-            - run: yarn install
+            - run: yarn
             - run: yarn test
-    prettier:
+    build:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
             - uses: actions/setup-node@v2
               with:
                   node-version: '14'
-            - run: yarn install
-            - run: yarn pretty:check
+            - run: yarn
+            - run: yarn build
+    eslint:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - uses: actions/setup-node@v2
+              with:
+                  node-version: '14'
+            - run: yarn
+            - run: yarn lint
