--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "typescript": "^4"
   },
   "dependencies": {
+    "bigint-buffer": "^1.1.5",
     "bs58": "^4.0.0",
     "buffer": "^6.0.3",
     "text-encoding-utf-8": "^1.0.2"
