--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "exports": {
     ".": {
-      "types": "./lib/types/lib.d.ts",
-      "require": "./lib/cjs/lib.js",
-      "import": "./lib/esm/lib.js",
-      "default": "./lib/esm/lib.js"
+      "types": "./lib/types/index.d.ts",
+      "require": "./lib/cjs/index.js",
+      "import": "./lib/esm/index.js",
+      "default": "./lib/esm/index.js"
     }
   },
   "repository": {
