--- a/borsh-ts/test/.eslintrc.yml
+++ b/borsh-ts/test/.eslintrc.yml
@@ -1,6 +1,8 @@
 extends: '../../.eslintrc.yml'
 env:
+  es6: true
   jest: true
+  es2020: true
 rules:
   no-inner-declarations: 1
   '@typescript-eslint/no-explicit-any': 1
