--- a/borsh-ts/test/.eslintrc.yml
+++ b/borsh-ts/test/.eslintrc.yml
@@ -1,3 +1,10 @@
 extends: '../../.eslintrc.yml'
 env:
+  es6: true
   jest: true
+  es2020: true
+rules:
+  no-inner-declarations: 1
+  '@typescript-eslint/no-explicit-any': 1
+  '@typescript-eslint/explicit-function-return-type': 0
+  '@typescript-eslint/no-var-requires': 0
