--- a/package.json
+++ b/package.json
@@ -46,14 +46,19 @@
   },
   "homepage": "https://github.com/near/borsh-js#readme",
   "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@types/babel__core": "^7.1.2",
     "@types/babel__template": "^7.0.2",
+    "@types/jest": "^29.5.9",
     "@types/node": "^12.7.3",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
+    "babel-jest": "^29.7.0",
+    "bn.js": "^5.2.0",
     "eslint": "^8.17.0",
     "jest": "^26.0.1",
-    "typescript": "^4",
-    "bn.js": "^5.2.0"
+    "typescript": "^4"
   }
 }
