--- a/examples/cjs/package.json
+++ b/examples/cjs/package.json
@@ -4,7 +4,10 @@
   "version": "2.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "borsh-js": "file:../../"
+    "borsh": "^2"
   }
 }
