--- a/examples/esm/package.json
+++ b/examples/esm/package.json
@@ -5,7 +5,10 @@
   "description": "",
   "type": "module",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "borsh-js": "file:../../"
+    "borsh": "^2"
   }
 }
